tests/compile_fail/label_leading_digit.rs
skuld::new_label!(pub BAD, "1foo");

fn main() {}
