tests/compile_fail/label_leading_digit.stderr
error[E0080]: evaluation panicked: invalid label name: must start with an ASCII letter or underscore
 --> tests/compile_fail/label_leading_digit.rs:1:1
  |
1 | skuld::new_label!(pub BAD, "1foo");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD` failed inside this call
  |
note: inside `Label::__new`
 --> src/label.rs
  |
  |         validate_label_name(name);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `label::validate_label_name`
 --> src/label.rs
  |
  |         panic!("invalid label name: must start with an ASCII letter or underscore");
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
